--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h2>
       Index page
   </h2>
-  <a href="page1.html">Page1</a> 
+  <a href="page1.html">Page1</a> <br>
+  <a href="page2.html">Page2</a> 
 </body>
 </html>
